Minor fixes ========
Added styling for links
Added color class for links
Removed subtext from about page as it didn't match other pages
Fixed hr on services page as it was too long
Changed the link color from #FF9933 back to inherit

--- a/css/jodak.css
+++ b/css/jodak.css
@@ -11,7 +11,8 @@ html {
 }
 
 a {
-    color: #FF9933;
+    font-weight: bold;
+    color: inherit;
 }
 
 a:hover {
@@ -620,4 +621,10 @@ button.jodak-form {
     color: #FFF;
     background-color: #333;
     border: 0 solid transparent;
+}
+
+/* TYPOGRAPHY */
+h1.subtitle {
+    font-weight: bold;
+    text-transform: capitalize;
 }
